data/derived/comb/progs/unify/prog1397.ml.out
Characters 86-88:
  | Sine a -> sin(eval(a,x,y)*pi)
                              ^^
Error: This expression has type float but an expression was expected of type
         int
